--- a/RESTApi/app/config/common/config.yml
+++ b/RESTApi/app/config/common/config.yml
@@ -77,7 +77,11 @@ nelmio_cors:
         allow_headers: ["content-type", "authorization"]
         max_age:       3600
     paths:
-        '^/': ~
+        '^/api':
+            allow_origin: ['*']
+            allow_headers: ['*']
+            allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
+            max_age: 3600
 
 fos_rest:
     param_fetcher_listener: true
