--- a/RESTApi/app/config/common/parameters.yml
+++ b/RESTApi/app/config/common/parameters.yml
@@ -12,7 +12,7 @@ parameters:
     secret: ThisTokenIsNotSoSecretChangeIt
 
      # nelmio cors
-    cors_allow_origin: 'http://localhost'
+    cors_allow_origin: '*'
 
     # nelmio api docs
     api_name: 'Your API name'
